[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-renamer"
version = "0.1.0"
description = "A smart regex-based file renaming utility with CLI and GUI"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/yourname/smart-renamer"
Issues = "https://github.com/yourname/smart-renamer/issues"

[project.scripts]
smart-renamer = "smart_renamer.cli:main"
smart-renamer-gui = "smart_renamer.gui:main"

[tool.setuptools.packages.find]
where = ["smart_renamer"]

[tool.setuptools.package-data]
"smart_renamer" = ["*.json"]
