[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_renamer"
version = "0.1.0"
description = "A smart regex-based file renaming utility with CLI and GUI"
authors = [
    { name = "Coby Amar", email = "cobyamar+github@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/Coby-Amar/smart_renamer"
Issues = "https://github.com/Coby-Amar/smart_renamer/issues"

[project.scripts]
smart_renamer = "smart_renamer.cli:main"
smart_renamer_gui = "smart_renamer.gui:main"

[tool.setuptools.packages.find]
where = ["./"]

[tool.setuptools.package-data]
"smart_renamer" = ["*.json"]

[tool.poetry]
name = "smart_renamer"
version = "0.1.0"
description = "A versatile file renaming utility"
authors = ["Coby Amar <youremail@example.com>"]
license = "MIT"
